raw/hyper.0.5.0--2016-11-09-12-29-18--4.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./hyper.0.5.0
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling hyper v0.5.0 (file:///root/benchmarks/hyper.0.5.0)
time: 0.023; rss: 48MB	parsing
Lines of code:             9003
Pre-expansion node count:  44129
time: 0.000; rss: 48MB	recursion limit
time: 0.000; rss: 48MB	crate injection
time: 0.000; rss: 48MB	plugin loading
time: 0.000; rss: 48MB	plugin registration
time: 0.085; rss: 88MB	expansion
time: 0.000; rss: 88MB	maybe building test harness
time: 0.001; rss: 88MB	maybe creating a macro crate
Post-expansion node count: 101823
time: 0.000; rss: 88MB	checking for inline asm in case the target doesn't support it
time: 0.002; rss: 88MB	complete gated feature checking
time: 0.003; rss: 88MB	early lint checks
time: 0.001; rss: 88MB	AST validation
time: 0.016; rss: 92MB	name resolution
time: 0.008; rss: 96MB	lowering ast -> hir
time: 0.001; rss: 96MB	indexing hir
time: 0.001; rss: 96MB	attribute checking
time: 0.001; rss: 91MB	language item collection
time: 0.002; rss: 91MB	lifetime resolution
time: 0.000; rss: 91MB	looking for entry point
time: 0.000; rss: 91MB	looking for plugin registrar
time: 0.005; rss: 95MB	region resolution
time: 0.001; rss: 95MB	loop checking
time: 0.001; rss: 95MB	static item recursion checking
time: 0.037; rss: 95MB	compute_incremental_hashes_map
time: 0.000; rss: 95MB	load_dep_graph
time: 0.015; rss: 97MB	type collecting
time: 0.000; rss: 97MB	variance inference
time: 0.028; rss: 103MB	coherence checking
time: 0.045; rss: 104MB	wf checking
time: 0.026; rss: 104MB	item-types checking
time: 0.326; rss: 114MB	item-bodies checking
time: 0.000; rss: 114MB	drop-impl checking
time: 0.029; rss: 114MB	const checking
time: 0.005; rss: 114MB	privacy checking
time: 0.001; rss: 114MB	stability index
time: 0.003; rss: 114MB	intrinsic checking
time: 0.001; rss: 114MB	effect checking
time: 0.008; rss: 114MB	match checking
time: 0.004; rss: 114MB	liveness checking
time: 0.021; rss: 114MB	rvalue checking
time: 0.048; rss: 133MB	MIR dump
  time: 0.006; rss: 133MB	SimplifyCfg
  time: 0.011; rss: 133MB	QualifyAndPromoteConstants
  time: 0.013; rss: 133MB	TypeckMir
  time: 0.001; rss: 133MB	SimplifyBranches
  time: 0.003; rss: 133MB	SimplifyCfg
time: 0.034; rss: 133MB	MIR cleanup and validation
time: 0.054; rss: 133MB	borrow checking
time: 0.003; rss: 133MB	reachability checking
time: 0.004; rss: 133MB	death checking
time: 0.005; rss: 133MB	stability checking
time: 0.000; rss: 133MB	unused lib feature checking
time: 0.041; rss: 135MB	lint checking
time: 0.000; rss: 135MB	resolving dependency formats
  time: 0.001; rss: 135MB	NoLandingPads
  time: 0.003; rss: 135MB	SimplifyCfg
  time: 0.008; rss: 135MB	EraseRegions
  time: 0.001; rss: 135MB	AddCallGuards
  time: 0.022; rss: 137MB	ElaborateDrops
  time: 0.001; rss: 137MB	NoLandingPads
  time: 0.005; rss: 137MB	SimplifyCfg
  time: 0.003; rss: 137MB	InstCombine
  time: 0.003; rss: 137MB	Deaggregator
  time: 0.000; rss: 137MB	CopyPropagation
  time: 0.004; rss: 137MB	SimplifyLocals
  time: 0.001; rss: 137MB	AddCallGuards
  time: 0.000; rss: 137MB	PreTrans
time: 0.053; rss: 137MB	MIR optimisations
  time: 0.012; rss: 142MB	write metadata
  time: 0.128; rss: 147MB	translation item collection
  time: 0.015; rss: 151MB	codegen unit partitioning
  time: 0.014; rss: 206MB	internalize symbols
time: 1.016; rss: 206MB	translation
time: 0.000; rss: 206MB	assert dep graph
time: 0.000; rss: 206MB	serialize dep graph
  time: 0.089; rss: 151MB	llvm function passes [0]
  time: 0.041; rss: 153MB	llvm module passes [0]
  time: 1.670; rss: 153MB	codegen passes [0]
  time: 0.000; rss: 153MB	codegen passes [0]
time: 1.940; rss: 153MB	LLVM passes
time: 0.000; rss: 153MB	serialize work products
time: 0.068; rss: 95MB	linking
done
